# mirror_platform_frameworks_av

./: 916230f.diff  Android.bp  CleanSpec.mk  METADATA  OWNERS  PREUPLOAD.cfg  PatchPanel.cpp  SHARED_SURFAC_PATCHE.diff  a.txt  groups  project.config
apex/: Android.bp  TEST_MAPPING  file_contexts  ld.config.txt  linker.config.txt  manifest_codec.json
apex/testing/: Android.bp
camera/: Android.bp  Android.mk  CameraBase.cpp  CameraMetadata.cpp  CameraParameters2.cpp  CameraUtils.cpp  CaptureResult.cpp  OWNERS  VendorTagDescriptor.cpp
camera/camera2/: CaptureRequest.cpp  ConcurrentCamera.cpp  OutputConfiguration.cpp
camera/cameraserver/: Android.bp  Android.mk  cameraserver.rc
camera/ndk/: Android.bp  NdkCameraDevice.cpp  NdkCaptureRequest.cpp  libcamera2ndk.map.txt
camera/tests/: Android.bp  Android.mk  CameraBinderTests.cpp  VendorTagDescriptorTests.cpp
cmds/: OWNERS
cmds/screenrecord/: Android.bp  Android.mk  FrameOutput.cpp  Overlay.cpp  screenrecord.cpp
cmds/stagefright/: Android.bp  Android.mk  SimplePlayer.cpp  audioloop.cpp  codec.cpp  mediafilter.cpp  muxer.cpp  record.cpp  recordvideo.cpp  stagefright.cpp
drm/: TEST_MAPPING
drm/common/: Android.bp  IDrmManagerService.cpp
drm/drmserver/: Android.bp  Android.mk  DrmManager.cpp  DrmManagerService.cpp  drmserver.rc  drmserver_dynamic.rc
drm/libdrmframework/: Android.bp  DrmManagerClientImpl.cpp
drm/libmediacas/: Android.bp  IDescramblerHal.cpp
drm/libmediadrm/: Android.bp  CryptoHal.cpp  CryptoMetricsLogger.cpp  DrmHal.cpp  DrmHalAidl.cpp  DrmHalHidl.cpp  DrmMetricsLogger.cpp  DrmSessionManager.cpp  DrmStatus.cpp  DrmUtils.cpp  MetricsErrored.cpp  TEST_MAPPING
drm/libmediadrmrkp/: Android.bp
include/: OWNERS
include/drm/: TEST_MAPPING  drm_framework_common.h
include/media/: AudioResamplerPublic.h  AudioSystem.h  AudioTrack.h  DataSource.h  EffectsFactoryApi.h  IAudioPolicyService.h  IMediaDeathNotifier.h  MediaDefs.h  MediaExtractorPluginApi.h  MediaPlayerInterface.h  Metadata.h  MicrophoneInfo.h  OWNERS  RingBuffer.h  ToneGenerator.h  mediaplayer.h  nbaio  stagefright
media/: Android.mk  OWNERS  TEST_MAPPING
media/libmedia/: OWNERS  (+30 more)
media/tests/benchmark/MediaBenchmarkTest/src/main/cpp/: Android.bp  CMakeLists.txt  NativeDecoder.cpp  NativeEncoder.cpp  NativeExtractor.cpp  NativeMuxer.cpp
radio/: IRadio.cpp  OWNERS  Radio.cpp
services/: OWNERS
soundtrigger/: SoundTrigger.cpp
tools/: mainline_hook_partial.sh
(+2282 files in other folders)
